# fastapi-postgresql

{{cookiecutter.project_slug}}/: docker-compose.override.yml  docker-compose.yml
{{cookiecutter.project_slug}}/backend/: celeryworker.dockerfile
{{cookiecutter.project_slug}}/backend/app/: pyproject.toml
{{cookiecutter.project_slug}}/frontend/: Dockerfile  package-lock.json
